<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_rating"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_rating_dialog" >

    <ImageView
        android:id="@+id/dialog_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:padding="2dp"
        android:src="@drawable/dialog_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/delete_history"
        android:textColor="@color/activity_tab_text"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="24dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:gravity="center"
        android:text="@string/confirm_to_delete_all_history"
        android:textColor="@color/activity_tab_text"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="18dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="14dp"
        android:background="@drawable/dialog_btn_bg" />

</LinearLayout>

